syntax = "proto3";

package token_manager;

import "google/protobuf/timestamp.proto";

service TokenManager {
   rpc CreateToken (TokenRequest) returns (Token) {}
   rpc ValidateToken (Token) returns (Validity) {}
   rpc DecrementToken (Token) returns (Token) {}
}

message TokenRequest {}

message Token {
   string id = 1;
   google.protobuf.Timestamp created = 2;
   int32 remaining = 3;
}

message Validity {
   bool valid = 1;
   Token token =2;
}